[sync] Prevent sessions flare on startup

SyncSessionsWebContents router triggered its flare for any notification
it received, no matter what. This caused it to trigger a flare more or
less immediately upon startup. This change caused the flare to trigger
only if the notification is meaningful; i.e. it's for a valid tab's
load completed event. This is a change from the past behavior, which
wouldn't flare for tabs that shouldn't sync, like the new tab page, but
would flare for any event type.

R=skym@chromium.org

BUG=712372

Review-Url: https://codereview.chromium.org/2824073002
Cr-Commit-Position: refs/heads/master@{#466119}

Former-commit-id: e8227a0e1c5fc7f230fe575086e1816a4e9fa6ae