chrome/browser/sync/sessions/sync_sessions_web_contents_router.h
@@ -36,7 +36,8 @@ class SyncSessionsWebContentsRouter : public LocalSessionEventRouter,
 
   // Notify the router that the tab corresponding to |web_contents| has been
   // modified in some way.
-  void NotifyTabModified(content::WebContents* web_contents);
+  void NotifyTabModified(content::WebContents* web_contents,
+                         bool page_load_completed);
   // Inject a flare that can be used to start sync. See the comment for
   // StartSyncFlare in syncable_service.h for more.
   void InjectStartSyncFlare(syncer::SyncableService::StartSyncFlare flare);
